# auto_google_play

./: README.md  compose.yaml
Claude-register/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
Claude-register/.github/workflows/: quality.yml
Claude-register/claude_register/: __init__.py
Claude-register/claude_register/auth/: __init__.py  service.py
Claude-register/claude_register/challenge/: __init__.py  arkose.py
Claude-register/claude_register/cli/: __init__.py  full_run.py
Claude-register/claude_register/compliance/: __init__.py  kyc.py
Claude-register/claude_register/config/: __init__.py  dynamic.py
Claude-register/claude_register/core/: __init__.py  browser.py  diagnostics.py  run_guard.py  security.py
Claude-register/claude_register/diagnostics/: __init__.py  gt2_probe.py  stage0_probe.py
Claude-register/claude_register/mail/: __init__.py  fetcher.py
Claude-register/claude_register/onboarding/: __init__.py  (+1 more)
Claude-register/docs/: all-requests.md  architecture.md  extract_har.py  optimization-process.md  registration-flow.md
Claude-register/examples/: accounts.example.txt  config.example.json
Claude-register/scripts/: build_release.py
Claude-register/tests/: __init__.py  test_contract_and_web_security.py  test_events.py  test_mail_xcaigc.py  test_package_layout.py  test_persistence.py  test_recovery.py  test_registration.py  test_release.py  test_runtime_hardening.py
chatgpt_register/: .env.example  .gitignore  README.md  pyproject.toml
chatgpt_register/chatgpt_register/: __init__.py  cli.py
chatgpt_register/docs/: architecture.md  registration-flow.md
chatgpt_register/examples/: accounts.example.txt  config.example.json
chatgpt_register/tests/: test_orchestration.py  test_protocol_contract.py  test_registration.py  test_web.py
(+143 files in other folders)
